Fix visibility

--- a/src/scss/core/components/_bts-preferences-modal.scss
+++ b/src/scss/core/components/_bts-preferences-modal.scss
@@ -824,7 +824,7 @@
 .show--preferences {
   #cc-main {
     .cc--anim {
-      .pm {
+      .bts-pm {
         opacity: 1;
         visibility: visible !important;
       }
